kubernetes/network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
       - namespaceSelector:
            matchLabels:
              name: application-namespace
       - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-service-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: api-gateway
       
      ports:
        - protocol: TCP
          port: 8081

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-to-api-gateway-network-policy
  namespace: application-namespace
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
       - namespaceSelector:
            matchLabels:
              name: traefik
       
      ports:
        - protocol: TCP
          port: 8080

---
